--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,23 @@
-.App {
-  text-align: center;
+
+.cognitoHocWrapper {
+  margin: 10px 10px 10px 10px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.cognitoHocLogin {
+  margin: 10px 10px 10px 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.cognitoHocSignInButton {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: green;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.cognitoHocSignOutButton {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: red;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
